select box issue on dark mode resolved

--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -1200,7 +1200,11 @@ body {
   border: 1px solid #ced4da !important;
   color: #fff !important;
 }
-
+.select_dark_new {
+  background: rgb(30, 40, 61);
+  border: 1px solid #000000 ;
+  color: #fff;
+}
 .border-theme {
   border: 1px solid #dc143c !important;
 }
